src/snapshots/sqlc__test__select__cast__cast_as.snap
---
source: src/test.rs
expression: rs
---
pub struct ARows {
    pub language_id: String,
}
pub async fn a(
    c: &impl tokio_postgres::GenericClient,
) -> Result<Vec<ARows>, tokio_postgres::Error> {
    c.query("SELECT CAST(language_id AS TEXT) FROM films", &[])
        .await
        .map(|rs| { rs.into_iter().map(|r| ARows { language_id: r.get(0) }).collect() })
}
